--- a/cli-ng/src/v3/templates/default/actix/client/api_clients.mustache
+++ b/cli-ng/src/v3/templates/default/actix/client/api_clients.mustache
@@ -25,10 +25,10 @@ pub trait {{{classname}}}: Clone {
     {{#operations}}
     {{#operation}}
     {{#description}}
-    /// {{{.}}}
+    /// {{{description}}}
     {{/description}}
     {{#notes}}
-    /// {{{.}}}
+    /// {{{notes}}}
     {{/notes}}
     async fn {{{operationId}}}(&self, {{#allParams}}{{{paramName}}}: {{^required}}Option<{{/required}}{{#required}}{{#isNullable}}Option<{{/isNullable}}{{/required}}{{#isString}}{{#isArray}}Vec<{{/isArray}}&str{{#isArray}}>{{/isArray}}{{/isString}}{{#isUuid}}{{#isArray}}Vec<{{/isArray}}&uuid::Uuid{{#isArray}}>{{/isArray}}{{/isUuid}}{{^isString}}{{^isUuid}}{{^isPrimitiveType}}{{^isContainer}}crate::models::{{/isContainer}}{{/isPrimitiveType}}{{{dataType}}}{{/isUuid}}{{/isString}}{{^required}}>{{/required}}{{#required}}{{#isNullable}}>{{/isNullable}}{{/required}}{{^-last}}, {{/-last}}{{/allParams}}) -> Result<{{#supportMultipleResponses}}ResponseContent<{{{operationIdCamelCase}}}Success>{{/supportMultipleResponses}}{{^supportMultipleResponses}}{{^returnType}}(){{/returnType}}{{#returnType}}{{{returnType}}}{{/returnType}}{{/supportMultipleResponses}}, Error<crate::models::RestJsonError>>;
     {{/operation}}
@@ -166,7 +166,7 @@ impl {{{classname}}} for {{{classname}}}Client {
         {{/hasBodyParam}}
 
         let local_var_status = local_var_resp.status();
-        
+
         if local_var_status.is_success() {
             {{^supportMultipleResponses}}
             {{^returnType}}
